--- a/eureka/src/main/resources/application.yaml
+++ b/eureka/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
-server:
-  port: 8761
 eureka:
   client:
     register-with-eureka: false
     fetch-register: false
+  server:
+    response-cache-update-interval-ms: 1000
