--- a/pc/src/main/resources/application.properties
+++ b/pc/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-server.port=8081
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
 spring.application.name=catalog
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.preferIpAddress=true
+eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka/
+spring.cloud.config.enabled=false
