--- a/po/src/main/resources/application.properties
+++ b/po/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-server.port=8082
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-logging.level.org.nipu=DEBUG
 spring.application.name=order
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.preferIpAddress=true
+eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka/
+spring.cloud.config.enabled=false
