--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,9 @@ services:
       - eureka
     environment:
       SPRING_DATA_MONGODB_HOST: mongo
+      SPRING_PROFILES_ACTIVE: fluent
+    volumes:
+      - app-logs:/opt/springboot/logs/
     ports:
       - "8081:8080"
 
@@ -36,8 +39,43 @@ services:
       - eureka
     environment:
       SPRING_DATA_MONGODB_HOST: mongo
+      SPRING_PROFILES_ACTIVE: fluent
+    volumes:
+      - app-logs:/opt/springboot/logs/
     ports:
       - "8082:8080"
+
+  elasticsearch:
+    environment:
+      http.host: 0.0.0.0
+      transport.host: 127.0.0.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.2.1
+    ports:
+      - 9200:9200
+
+  kibana:
+    depends_on:
+      - elasticsearch
+    environment:
+      ELASTICSEARCH_PASSWORD: changeme
+      ELASTICSEARCH_URL: http://elasticsearch:9200
+      ELASTICSEARCH_USERNAME: elastic
+    image: docker.elastic.co/kibana/kibana-oss:6.2.1
+    ports:
+      - 5601:5601
+
+  fluentd:
+    build: ./fluentd
+    depends_on:
+      - elasticsearch
+    volumes:
+      - ./fluentd/conf:/fluentd/etc
+      - app-logs:/fluentd/log/
+    ports:
+      - 24224:24224
+
+volumes:
+  app-logs:
 
 networks:
   default:
