--- a/fluentd/conf/fluent.conf
+++ b/fluentd/conf/fluent.conf
@@ -1,8 +1,8 @@
-# fluentd/conf/fluent.conf
 <source>
-    @type forward
-    port 24224
-    bind 0.0.0.0
+    @type tail
+    path /fluentd/log/application.*.log
+    tag fluentd
+    format json
 </source>
 <match **>
     @type copy
