--- a/pc/Dockerfile
+++ b/pc/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:8-jdk-alpine
+VOLUME /opt/springboot/logs
 EXPOSE 8080
 ADD target/pc-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT exec java -jar /app.jar
